typescript/checker/tests/conformance/es6/templates/templateStringInNewOperatorES6.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            29,
        ),
        hi: BytePos(
            43,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringInNewOperatorES6.ts:2:13
  |
2 | var x = new `abc${ 1 }def`;
  |             ^^^^^^^^^^^^^^

